# maiOS

./: .gitattributes  .gitignore  .gitmessage  CMakeLists.txt  LICENSE  Makefile  README.md  toolchain.cmake
conf/grub/: grub.cfg
docs/: building.md  commits.md  dependencies.md  interrupts.md  kernel_errors.md  requirements.md
include/: defines.h
include/kernel/: constants.h  cxxabi.h  debug.h  defines.h  io.h  io.hpp  kprintf.h  kprintf.hpp  logger.h  logger.hpp  multiboot2.h  multiboot2.hpp  panic.h  uart.h  uart.hpp  version.h
include/kernel/arch/: cpu.h  framebuffer.h  kmalloc.h  ksyms.h  memory.h  uart.h  uart.hpp  version.h  version.hpp
include/kernel/arch/x86_64/: acpi.h  cmos.h  cpu.h  elf.h  framebuffer.h  gdt.h  interrupts.h  interrupts.hpp  io.h  io.hpp  kmalloc.h  ksyms.h  memory.h  mmu.h  msr.h  multiboot2.h  multiboot2.hpp  multiboot2v2.h  rflags.h  scheduler.h  time.h  trace.hpp  tss.h  uart.h  uart.hpp  version.hpp
include/kernel/arch/x86_64/boot/: entry.h
include/kernel/arch/x86_64/interrupts/: apic.h  guard.h  pic.h
include/kernel/arch/x86_64/memory/: frame_allocator.h  manager.h  memory_region.h  page_table.h  paging.h  physaddr.h  physical_memory.h  regions.h  virtaddr.h  zone.h
include/kernel/arch/x86_64/scheduler/: task.h  thread.h
include/kernel/arch/x86_64/time/: rtc.h  rtc.hpp
include/lib/: ctype.h  stdio.h  stdlib.h  string.h
include/lib/libc/: alloca.h  assert.h  ctype.h  stdio.h  stdlib.h  string.h
include/lib/libc++/: algorithm.h  array  array.h  bitfield.h  bitmap.h  cctype  cstdio  cstdlib  cstring  expected  expected.h  initializer_list  iterator.h  memory.h  new.h  optional  optional.h  pair.h  string_view.h  tuple.h  type_traits  utility  utility.h  vector.h
include/lib/libc++/bits/: allocator.h  placement_new.h  reverse_iterator.h  vector_base.h  vector_bool.h
include/lib/libc++/internal/: allocator.h  construct.h  unique_ptr.h  vector_base.h  vector_bool.h
include/libc/: assert.h  ctype.h  errno.h  malloc.h  stdio.h  stdlib.h  string.h  unistd.h  wchar.h
include/libc++/: .gitattributes  algorithm  array  atomic  bitfield  cassert  cctype  chrono  cstdio  cstdlib  cstring  cwchar  expected  format  functional  iterator  list  memory  memory_resource  mutex  new  optional  pair  print  queue  random  span  stack  string  string_view  thread  tuple  utility  variant  vector
include/libc++/bits/: algo_basic.h  algo_heap.h  allocator.h  allocator_traits.h  back_insert_iterator.h  chrono_duration.h  construct.h  format_arg.h  format_args.h  format_context.h  format_forward.h  format_store.h  format_string.h  front_insert_iterator.h  insert_iterator.h  invoke.h  iterator_traits.h  placement_new.h  queue_basic.h  queue_priority.h  random_device.h  random_lcg.h  random_mt.h  reverse_iterator.h  unique_ptr.h  vector_base.h  vector_bool.h
include/libc++/bits/fmt/: arg.h  args.h  context.h  format_arg.h  format_args.h  format_buffer.h  format_context.h  format_fwd.h  format_parse_context.h  format_string.h  formatter.h  forward.h  iterator.h  parse.h  store.h  string.h
include/libc/bits/: file.h  malloc.h  mbstate.h
include/libc/sys/: types.h
kernel/: CMakeLists.txt  io.cpp  kmain.cpp  kprintf.cpp  linker.ld  multiboot2.cpp  uart.cpp
kernel/boot/: header.asm  init32.asm  init64.asm
kernel/crt/: crti.asm  crtn.asm
kernel/include/arch/: cpu.h  framebuffer.h  ksyms.h  memory.h  uart.h
kernel/include/arch/x86_64/: cpu.h  framebuffer.h  io.h  ksyms.h  msr.h  multiboot2.h  uart.h
kernel/include/arch/x86_64/boot/: entry.h
kernel/include/arch/x86_64/interrupts/: pic.h
kernel/include/arch/x86_64/memory/: frame_allocator.h  memory_region.h  page_table.h  paging.h  regions.h  zone.h
kernel/src/: CMakeLists.txt  cxxabi.cpp  debug.cpp  panic.cpp
kernel/src/arch/x86_64/: CMakeLists.txt  acpi.cpp  cmos.cpp  cpu.cpp  framebuffer.cpp  interrupts.cpp  ksyms.cpp  linker.ld  main.cpp  memory.cpp  multiboot2.cpp  scheduler.cpp  tss.cpp  uart.cpp
kernel/src/arch/x86_64/asm/: boot.asm  crtn.asm  scheduler.asm
kernel/src/arch/x86_64/boot/: init32.asm  init64.asm
kernel/src/arch/x86_64/interrupts/: apic.cpp  pic.cpp
kernel/src/arch/x86_64/memory/: frame_allocator.cpp  page_table.cpp  paging.cpp  physical_memory.cpp
kernel/src/arch/x86_64/time/: pit.cpp  rtc.cpp
lib/: CMakeLists.txt  stdlib.c  string.c
lib/libc/: CMakeLists.txt
lib/libc++/: CMakeLists.txt
lib/libc++/include/: algorithm  array  array.h  cctype  cerrno  cstdio  cstdlib  cstring  cwchar  expected.h  iterator  memory  new  optional  optional.h  pair.h  string  string_view  string_view.h  utility  vector
lib/libc++/include/bits/: construct.h  unique_ptr.h  vector_bool.h  weak_ptr.h
lib/libc++/include/internal/: algo_basic.h  allocator.h  char_traits.h  construct.h  placement_new.h  unique_ptr.h  vector_base.h  vector_bool.h
lib/libc++/src/: new.cpp  random.cpp
lib/libc/include/: assert.h  stdio.h  stdlib.h  string.h  wchar.h
lib/libc/include/bits/: file.h  init_stdio.h
lib/libc/src/: assert.cpp  ctype.cpp  errno.cpp  malloc.cpp  stdio.cpp  stdlib.cpp  string.cpp  unistd.cpp  wchar.cpp
lib/libc/src/bits/: stack_guard.cpp
src/kernel/: CMakeLists.txt  cxxabi.cpp  debug.cpp  io.cpp  kmain.cpp  kprintf.cpp  multiboot2.cpp  uart.cpp
src/kernel/arch/x86_64/: CMakeLists.txt  cmos.cpp  interrupts.cpp  kmain.cpp  kmalloc.cpp  ksyms.cpp  linker.ld  main.cpp  memory.cpp  mmu.cpp  multiboot2.cpp  multiboot2v2.cpp  pic.cpp  trace.cpp  uart.cpp
src/kernel/arch/x86_64/boot/: header.asm  init32.asm  init64.asm
src/kernel/arch/x86_64/interrupts/: apic.cpp  pic.cpp
src/kernel/arch/x86_64/memory/: frame_allocator.cpp  manager.cpp  page_table.cpp  pagetable.cpp  paging.cpp
src/kernel/boot/: header.asm  init32.asm  init64.asm
src/lib/: CMakeLists.txt  ctype.c  ctype.cpp  stdio.cpp  stdlib.c  stdlib.cpp  string.c  string.cpp
src/lib/libc/: assert.cpp  ctype.cpp  stdio.cpp  stdlib.cpp  string.cpp
tools/: compiler-setup.sh  make-initrd.cmake  make-iso.cmake  toolchain.cmake
tools/patches/gcc/: mno-red-zone.patch
(+2 files in other folders)
