set(KERNEL_GLOBAL_SOURCES
	cxxabi.cpp
	debug.cpp
	panic.cpp
)

list(TRANSFORM KERNEL_GLOBAL_SOURCES PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")

if(ARCH MATCHES x86_64)
	add_subdirectory(arch/x86_64)
else()
	message(FATAL_ERROR "Unsupported architecture: ${ARCH}")
endif()

set(KERNEL_SOURCES
	${KERNEL_ARCH_SOURCES}
	${KERNEL_GLOBAL_SOURCES}
)

set(KERNEL_SOURCES ${KERNEL_SOURCES} PARENT_SCOPE)
set(LINKER_SCRIPT ${LINKER_SCRIPT} PARENT_SCOPE)
set(CRTI_SRC ${CRTI_SRC} PARENT_SCOPE)
set(CRTN_SRC ${CRTN_SRC} PARENT_SCOPE)